# ml-cpp

./: CMakeLists.txt  LICENSE
example/: CMakeLists.txt  linear_regression_example.cpp  matplotlib-example.cpp  simple_linear_regression.cpp
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt
src/algorithm/regression/: CMakeLists.txt  LinearRegression.cpp  LinearRegression.h
src/utilities/: CMakeLists.txt  metrics.cpp  metrics.h  utils.cpp  utils.h
